--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- About -->
             <article>
                 <section id="about">
-                    <div class="colum">
+                    <div class="column">
                         <h2>About D'MUSIC</h2>
                         <p>D'MUSIC has been established since <b>2015</b>. D'MUSIC is music learning
                             platform for everybody who want to learn music more seriously. D'MUSIC has been also made
